# OllamaHoles

./: cabal.project  ollama-holes-plugin.cabal
Test/: Main.hs
spec/: Main.hs
spec/GHC/Plugin/OllamaHoles/Candidate/: Spec.hs  WithRenamedExpr.hs
spec/GHC/Plugin/OllamaHoles/Candidate/Compat/: Spec.hs
spec/GHC/Plugin/OllamaHoles/Candidate/Normalize/: Spec.hs
spec/GHC/Plugin/OllamaHoles/Candidate/Rewrite/: Spec.hs
spec/GHC/Plugin/OllamaHoles/Config/: Spec.hs
spec/GHC/Plugin/OllamaHoles/Config/Preferences/: Spec.hs
spec/GHC/Plugin/OllamaHoles/Config/Trigger/: Spec.hs
spec/GHC/Plugin/OllamaHoles/Logger/: Spec.hs
spec/GHC/Plugin/OllamaHoles/Options/: Spec.hs
spec/GHC/Plugin/OllamaHoles/Options/Parse/: Spec.hs
spec/GHC/Plugin/OllamaHoles/Template/Expand/: Spec.hs
spec/GHC/Plugin/OllamaHoles/Template/Load/: Spec.hs
spec/GHC/Plugin/OllamaHoles/Template/Parse/: Spec.hs
spec/GHC/Plugin/OllamaHoles/Trigger/: Spec.hs
src/GHC/Plugin/: OllamaHoles.hs
src/GHC/Plugin/OllamaHoles/: Backend.hs  Candidate.hs  Config.hs  Error.hs  Flags.hs  Logger.hs  Options.hs  Prompt.hs  Template.hs  Trigger.hs
src/GHC/Plugin/OllamaHoles/Backend/: Common.hs  Gemini.hs  Ollama.hs  OpenAI.hs
src/GHC/Plugin/OllamaHoles/Candidate/: Compat.hs  Rewrite.hs
src/GHC/Plugin/OllamaHoles/Config/: Preferences.hs  Trigger.hs  Types.hs
