cabal-version:      3.4
name:               ollama-holes-plugin

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.6.0
synopsis: A typed-hole plugin that uses LLMs to generate valid hole-fits
description: This package provides a GHC plugin that uses LLMs to generate valid hole-fits.
             It supports multiple backends including Ollama, OpenAI, and Gemini.
              
             The following flags are available:
              
             To specify the model to use:
              
             > -fplugin-opt=GHC.Plugin.OllamaHoles:model=<model_name>
              
             To include documentation in the LLM's context (not recommended for small models):
              
             > -fplugin-opt=GHC.Plugin.OllamaHoles:include-docs
              
             To specify the backend to use (ollama, openai, or gemini):
              
             > -fplugin-opt=GHC.Plugin.OllamaHoles:backend=<backend_name>
              
             When using the openai backend, you can specify a custom base_url, e.g.
              
             > -fplugin-opt=GHC.Plugin.OllamaHoles:openai_base_url=api.groq.com/api 
              
             You can also specify which key to use.
              
             > -fplugin-opt=GHC.Plugin.OllamaHoles:openai_key_name=GROQ_API_KEY 
              
             To specify how many fits to generate (passed to the model)
              
             > -fplugin-opt=GHC.Plugin.OllamaHoles:n=5
              
             To enable debug output:
              
             > -fplugin-opt=GHC.Plugin.OllamaHoles:debug
              
             For custom model options:
              
             > -fplugin-opt=GHC.Plugin.OllamaHoles:model-options=<json>
              
             Where json is an object with your parameters, e.g.:
              
             > -fplugin-opt=GHC.Plugin.OllamaHoles:model-options={"num_ctxt": 32000, "temperature": 1.0}
              
             For the Ollama backend, make sure you have the Ollama CLI installed and the model
             you want to use is available. You can install the Ollama CLI by following the
             instructions at https://ollama.com/download,
             and you can install the default model (qwen3) by running `ollama pull qwen3`.
              
             For the OpenAI backend, you'll need to set the `OPENAI_API_KEY` environment variable with your API key.
              
             For the Gemini backend, you'll need to set the `GEMINI_API_KEY` environment variable with your API key.
              
             Note that the speed and quality of the hole-fits generated by the plugin depends on
             the model you use, and the default model requires a GPU to run efficiently.
             For a smaller model, we suggest `gemma3:4b-it-qat`, `phi4-mini-reasoning` or `deepcoder:1.5b`,
             or one of the smaller `qwen3` models, such as `qwen3:1.7b` or `qwen3:4b` or even `qwen3:0.6b`,
             though results may vary.

license:            MIT
license-file:       LICENSE
author:             Matthias Pall Gissurarson <mpg@mpg.is>
maintainer:         Matthias Pall Gissurarson <mpg@mpg.is>
copyright:          2025 (c) Matthias Pall Gissurarson  
category:           Development, Compiler Plugin
tested-with:        GHC == 9.6.*, GHC == 9.8.*, GHC == 9.10.*, GHC == 9.12.*
build-type:         Simple
extra-doc-files:    CHANGELOG.md
                    README.md
homepage:           https://github.com/Tritlo/OllamaHoles

source-repository head
  type:     git
  location: git://github.com/Tritlo/OllamaHoles.git

common warnings
    ghc-options: -Wall

common shared-base
  default-language: GHC2021
  build-depends:
      base >= 4.18 && < 4.22
    , aeson ^>= 2.2
    , bytestring >= 0.12.2
    , containers >= 0.6 && < 0.8
    , crypton >= 1.1.2
    , directory >= 1.3.10
    , filepath >= 1.5.5
    , ghc >= 9.6 && < 9.14
    , mtl >= 2.3
    , random >= 1.3
    , text ^>= 2.1
    , time >= 1.14
    , toml-parser >= 2.0.2
    , transformers >= 0.6.3
    , vector >= 0.13.2.0

common backend-deps
  build-depends:
      modern-uri ^>= 0.3
    , ollama-haskell ^>= 0.1
    , req ^>= 3.13

library
    import:           warnings, shared-base, backend-deps
    hs-source-dirs:   src
    exposed-modules:
      GHC.Plugin.OllamaHoles
    other-modules:
      GHC.Plugin.OllamaHoles.Backend
      GHC.Plugin.OllamaHoles.Backend.Common
      GHC.Plugin.OllamaHoles.Backend.Gemini
      GHC.Plugin.OllamaHoles.Backend.Ollama
      GHC.Plugin.OllamaHoles.Backend.OpenAI
      GHC.Plugin.OllamaHoles.Candidate
      GHC.Plugin.OllamaHoles.Candidate.Compat
      GHC.Plugin.OllamaHoles.Candidate.Rewrite
      GHC.Plugin.OllamaHoles.Config
      GHC.Plugin.OllamaHoles.Config.Preferences
      GHC.Plugin.OllamaHoles.Config.Types
      GHC.Plugin.OllamaHoles.Config.Trigger
      GHC.Plugin.OllamaHoles.Error
      GHC.Plugin.OllamaHoles.Flags
      GHC.Plugin.OllamaHoles.Logger
      GHC.Plugin.OllamaHoles.Options
      GHC.Plugin.OllamaHoles.Prompt
      GHC.Plugin.OllamaHoles.Template
      GHC.Plugin.OllamaHoles.Trigger



library ollama-holes-lib
  import:              warnings, shared-base, backend-deps
  visibility:          private
  hs-source-dirs:      src
  exposed-modules:
      GHC.Plugin.OllamaHoles.Backend
    , GHC.Plugin.OllamaHoles.Backend.Common
    , GHC.Plugin.OllamaHoles.Backend.Ollama
    , GHC.Plugin.OllamaHoles.Backend.OpenAI
    , GHC.Plugin.OllamaHoles.Backend.Gemini
    , GHC.Plugin.OllamaHoles.Candidate
    , GHC.Plugin.OllamaHoles.Candidate.Compat
    , GHC.Plugin.OllamaHoles.Candidate.Rewrite
    , GHC.Plugin.OllamaHoles.Config
    , GHC.Plugin.OllamaHoles.Config.Preferences
    , GHC.Plugin.OllamaHoles.Config.Types
    , GHC.Plugin.OllamaHoles.Config.Trigger
    , GHC.Plugin.OllamaHoles.Error
    , GHC.Plugin.OllamaHoles.Flags
    , GHC.Plugin.OllamaHoles.Logger
    , GHC.Plugin.OllamaHoles.Options
    , GHC.Plugin.OllamaHoles.Prompt
    , GHC.Plugin.OllamaHoles.Template
    , GHC.Plugin.OllamaHoles.Trigger



test-suite ollama-holes-spec
  import:              warnings, shared-base
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      spec
  other-modules:
      GHC.Plugin.OllamaHoles.Candidate.Spec
    , GHC.Plugin.OllamaHoles.Candidate.Compat.Spec
    , GHC.Plugin.OllamaHoles.Candidate.Normalize.Spec
    , GHC.Plugin.OllamaHoles.Candidate.Rewrite.Spec
    , GHC.Plugin.OllamaHoles.Candidate.WithRenamedExpr
    , GHC.Plugin.OllamaHoles.Logger.Spec
    , GHC.Plugin.OllamaHoles.Options.Spec
    , GHC.Plugin.OllamaHoles.Template.Load.Spec
    , GHC.Plugin.OllamaHoles.Template.Parse.Spec
    , GHC.Plugin.OllamaHoles.Template.Expand.Spec
    , GHC.Plugin.OllamaHoles.Trigger.Spec
    , GHC.Plugin.OllamaHoles.Config.Preferences.Spec
    , GHC.Plugin.OllamaHoles.Config.Spec
  build-depends:
      base
    , ghc-paths
    , ollama-holes-plugin:ollama-holes-lib
    , syb
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , temporary



executable ollama-holes-demo
  hs-source-dirs:      Test
  main-is:             Main.hs
  default-language:    GHC2021
  build-depends:
      base >= 4 && < 5
    , ollama-holes-plugin
    , ollama-holes-plugin:ollama-holes-lib
